added parse to gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ CocoaHeadsNL/CocoaHeadsNL/Settings.bundle/Acknowledgements.plist
 CocoaHeadsNL/CocoaHeadsNL/ParseConfig.plist
 CocoaHeadsNL/Pods
 xcuserdata
+CocoaHeadsNL/parse
