--- a/CocoaHeadsNL/CocoaHeadsNLTests/Info.plist
+++ b/CocoaHeadsNL/CocoaHeadsNLTests/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>nl.cocoaheads.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>nl.cocoaheads.app.$(PRODUCT_NAME:rfc1034identifier)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
