Remove generated screenshots. Also, ignore them.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ CocoaHeadsNL/CocoaHeadsNL/ParseConfig.plist
 CocoaHeadsNL/Pods
 xcuserdata
 CocoaHeadsNL/parse
+
+screenshots
+report.xml
+Error*.png
