--- a/CocoaHeadsNL/CocoaHeadsNL/Info.plist
+++ b/CocoaHeadsNL/CocoaHeadsNL/Info.plist
@@ -30,7 +30,7 @@
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>is2.mzstatic.com</key>
+			<key>mzstatic.com</key>
 			<dict>
 				<key>NSIncludesSubdomains</key>
 				<true/>
