--- a/CocoaHeadsNL/CloudKitSync/config.js.example
+++ b/CocoaHeadsNL/CloudKitSync/config.js.example
@@ -9,6 +9,8 @@
 
 module.exports.githubAuthOptions = {'user': '<insert your github username>', 'pass': '<insert your github password or auth token>'}
 
+module.exports.meetupApiKey = "<insert your meetup API key>"
+
 module.exports.containerConfig = {
   // Replace this with a container that you own.
   containerIdentifier:'iCloud.nl.cocoaheads.app.CocoaHeadsNL',
