--- a/CocoaHeadsNL/Podfile
+++ b/CocoaHeadsNL/Podfile
@@ -4,6 +4,9 @@ platform :ios, '8.1'
 pod 'ParseUI'
 pod 'ParseCrashReporting'
 
+pod 'Fabric'
+pod 'Crashlytics'
+
 post_install do | installer |
     require 'fileutils'
     FileUtils.cp_r('Pods/Target Support Files/Pods/Pods-Acknowledgements.plist', 'CocoaHeadsNL/Settings.bundle/Acknowledgements.plist', :remove_destination => true)
