Updated to CocoaPods v1.0.0

--- a/CocoaHeadsNL/Podfile
+++ b/CocoaHeadsNL/Podfile
@@ -1,10 +1,12 @@
 source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.1'
 
-pod 'Fabric'
-pod 'Crashlytics'
+target 'CocoaHeadsNL' do
+	pod 'Fabric'
+	pod 'Crashlytics'
+end
 
 post_install do | installer |
     require 'fileutils'
-    FileUtils.cp_r('Pods/Target Support Files/Pods/Pods-Acknowledgements.plist', 'CocoaHeadsNL/Settings.bundle/Acknowledgements.plist', :remove_destination => true)
+    FileUtils.cp_r('Pods/Target Support Files/Pods-CocoaHeadsNL/Pods-CocoaHeadsNL-Acknowledgements.plist', 'CocoaHeadsNL/Settings.bundle/Acknowledgements.plist', :remove_destination => true)
 end
