--- a/CocoaHeadsNL/Podfile
+++ b/CocoaHeadsNL/Podfile
@@ -3,8 +3,9 @@ platform :ios, '8.1'
 
 pod 'Fabric'
 pod 'Crashlytics'
-
-post_install do | installer |
-    require 'fileutils'
-    FileUtils.cp_r('Pods/Target Support Files/Pods/Pods-Acknowledgements.plist', 'CocoaHeadsNL/Settings.bundle/Acknowledgements.plist', :remove_destination => true)
+target 'CocoaHeadsNL' do
+  post_install do | installer |
+      require 'fileutils'
+      FileUtils.cp_r('Pods/Target Support Files/Pods-CocoaHeadsNL/Pods-CocoaHeadsNL-Acknowledgements.plist', 'CocoaHeadsNL/Settings.bundle/Acknowledgements.plist', :remove_destination => true)
+  end
 end
