--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: objective-c
-script:
+osx_image: xcode7
+before_install:
+  - brew update
+  - brew outdated xctool || brew upgrade xctool
   - cd CocoaHeadsNL
+script:
   - xctool -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
