--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: objective-c
 sudo: false
 osx_image: xcode7
+cache: cocoapods
+podfile: CocoaHeadsNL/Podfile
 before_install:
   - brew update
   - brew outdated xctool || brew upgrade xctool
+  - gem install cocoapods
   - cd CocoaHeadsNL
 script:
   - xctool -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
