--- a/CocoaHeadsNL/CocoaHeadsNL/Info.plist
+++ b/CocoaHeadsNL/CocoaHeadsNL/Info.plist
@@ -16,6 +16,10 @@
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>meetup</string>
+    </array>
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
