--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - brew update
   - brew outdated xctool || brew upgrade xctool
   - gem install --no-rdoc --no-ri cocoapods
-  - pod repo update
+  - pod repo update --silent
   - pod install --project-directory=CocoaHeadsNL
   - cd CocoaHeadsNL
 script:
