--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - brew outdated xctool || brew upgrade xctool
   - gem install --no-rdoc --no-ri cocoapods
   - pod repo update --silent
-  - pod install --project-directory=CocoaHeadsNL
   - cd CocoaHeadsNL
+  - pod install
 script:
   - xctool -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
