Use xcodebuild instead of xctool for build check
xctool doesn’t support building anymore since Xcode 8. See https://github.com/facebook/xctool/issues/704 for details.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ before_install:
   - cd CocoaHeadsNL
   - pod install
 script:
-  - xctool -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+  - xcodebuild -workspace CocoaHeadsNL.xcworkspace -scheme CocoaHeadsNL -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
