--- a/CocoaHeadsNL/Podfile
+++ b/CocoaHeadsNL/Podfile
@@ -9,6 +9,6 @@ target 'CocoaHeadsNL' do
   
   post_install do | installer |
       require 'fileutils'
-      FileUtils.cp_r('Pods/Target Support Files/Pods-CocoaHeadsNL/Pods-CocoaHeadsNL-Acknowledgements.plist', 'CocoaHeadsNL/Settings.bundle/Acknowledgements.plist', :remove_destination => true)
+      FileUtils.cp_r('Pods/Target Support Files/Pods-CocoaHeadsNL/Pods-CocoaHeadsNL-Acknowledgements.plist', 'CocoaHeadsNL/Common/SupportingFiles/Settings.bundle/Acknowledgements.plist', :remove_destination => true)
   end
 end
