--- a/CocoaHeadsNL/generalNotification/Info.plist
+++ b/CocoaHeadsNL/generalNotification/Info.plist
@@ -28,6 +28,8 @@
 			<string>nl.cocoaheads.app.CocoaHeadsNL.generalNotification</string>
 			<key>UNNotificationExtensionInitialContentSizeRatio</key>
 			<real>1</real>
+			<key>UNNotificationExtensionDefaultContentHidden</key>
+			<true/>
 		</dict>
 		<key>NSExtensionMainStoryboard</key>
 		<string>MainInterface</string>
