Test on iPhone Xs, iOS 13.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 xcode_project: CocoaHeadsNL/CocoaHeadsNL.xcodeproj
 xcode_scheme: CocoaHeadsNL
-xcode_destination: platform=iOS Simulator,OS=12.2,name=iPhone X
+xcode_destination: platform=iOS Simulator,OS=13.0,name=iPhone Xs
 sudo: false
 osx_image: xcode11
