--- a/CocoaHeadsNL/CocoaHeadsNL/CocoaHeadsNL.entitlements
+++ b/CocoaHeadsNL/CocoaHeadsNL/CocoaHeadsNL.entitlements
@@ -7,6 +7,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:cocoaheads.nl</string>
+		<string>webcredentials:*.cocoaheads.nl</string>
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
