enabled Mac OS and fixed first issues

--- a/CocoaHeadsNL/CocoaHeadsNL/CocoaHeadsNL.entitlements
+++ b/CocoaHeadsNL/CocoaHeadsNL/CocoaHeadsNL.entitlements
@@ -10,7 +10,7 @@
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.$(CFBundleIdentifier)</string>
+		<string>iCloud.nl.cocoaheads.app.CocoaHeadsNL</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -18,5 +18,9 @@
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
 </dict>
 </plist>
