--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,5 @@ jobs:
     - name: Run a multi-line script
       run: |
         sudo xcode-select -switch /Applications/Xcode_11.1.app
-        xcodebuild test -scheme CocoaHeadsNL -workspace CocoaHeadsNL/CocoaHeadsNL.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.1' | xcpretty
+        xcodebuild test -scheme CocoaHeadsNL -project CocoaHeadsNL/CocoaHeadsNL.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.1' | xcpretty
         
