--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: List available Xcode versions
+      run: ls /Applications | grep Xcode
     - name: Select Xcode
-      run: sudo xcode-select -switch /Applications/Xcode_11.1.app
+      run: sudo xcode-select -switch /Applications/Xcode_11.3.app && /usr/bin/xcodebuild -version
     - name: Run tests
-      run: xcodebuild test -scheme CocoaHeadsNL -project CocoaHeadsNL/CocoaHeadsNL.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.1' | xcpretty && exit ${PIPESTATUS[0]}
+      run: xcodebuild test -scheme CocoaHeadsNL -project CocoaHeadsNL/CocoaHeadsNL.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 11,OS=13.3' | xcpretty && exit ${PIPESTATUS[0]}
 
         
