--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 xcode_project: CocoaHeadsNL/CocoaHeadsNL.xcodeproj
 xcode_scheme: CocoaHeadsNL
-xcode_destination: platform=iOS Simulator,OS=13.0,name=iPhone Xs
+xcode_destination: platform=iOS Simulator,OS=13.3,name=iPhone 11
 sudo: false
-osx_image: xcode11
+osx_image: xcode11.3
