--- a/CocoaHeadsNL/CocoaHeadsNL/CocoaHeadsNL.entitlements
+++ b/CocoaHeadsNL/CocoaHeadsNL/CocoaHeadsNL.entitlements
@@ -11,7 +11,7 @@
 	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.$(CFBundleIdentifier)</string>
+		<string>iCloud.nl.cocoaheads.app.CocoaHeadsNL</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
@@ -19,5 +19,11 @@
 	</array>
 	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
+	<key>com.apple.security.app-sandbox</key>
+	<true/>
+	<key>com.apple.security.network.client</key>
+	<true/>
+	<key>com.apple.security.personal-information.location</key>
+	<true/>
 </dict>
 </plist>
